[package]
name = "rust-start"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = {version = "1.0.0-beta", features = ["from", "display"] }
serde = { version = "1.0.213", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
informix_rust = "0.0.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2"